@@ -1,3 +1,9 @@
+Wed Apr 25 20:20:07 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * utils/md5sum.c, lib/mlib.c: Modified mlib.c, to malloc enough space
+    for the digest, instead of modifying the static buffer that was
+    previously passed in.
+
 Thu Apr 26 00:32:35 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * po/da.po: Updated
